# ChessEngine

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.template  CMakePresets.json  CMakeSettings.json  CmakeLists.txt  LICENSE  README.md  [PATCH] Added boost-process library - rubcov23033@gmail.com - 2025-01-10 2312.eml  vcpkg.json
Project/MoveEvaluation/: CmakeLists.txt  main.cpp
Project/MoveGeneration/: CmakeLists.txt
Project/MoveGeneration/include/: MagicNumbers.h  MoveGeneration.h  MovgenTypes.h  Types.h
Project/MoveGeneration/src/: MagicNumbers.cpp  MoveGeneration.cpp  MovgenTypes.cpp
Project/UnitTests/: CmakeLists.txt
Project/UnitTests/MoveGeneration/: sliding_pieces.cpp
Project/Visualization/: CmakeLists.txt  main.cpp
Project/Visualization/headers/: draw_board.hpp  event_handler.hpp
Project/Visualization/src/: draw_board.cpp  event_handler.cpp
app/: chess.exe.lnk
scr/MoveGeneration/: CmakeLists.txt
scr/MoveGeneration/include/: Bitboard.h  MagicNumbers.h  MoveGeneration.h  MovgenTypes.h
scr/MoveGeneration/src/: Bitboard.cpp  MagicNumbers.cpp  MoveGeneration.cpp  MovgenTypes.cpp
scr/UnitTests/: CmakeLists.txt
scr/Visualization/: main.cpp
src/MoveEvaluation/: CMakeLists.txt  main.cpp
src/MoveEvaluation/headers/: commands.h  eval.h  search.h
src/MoveEvaluation/src/: commands.cpp  eval.cpp  search.cpp
src/MoveGeneration/: CMakeLists.txt  CmakeLists.txt
src/MoveGeneration/include/: Bitboard.h  MagicNumbers.h  MoveGeneration.h  MovgenTypes.h  Zobrist.h
src/MoveGeneration/src/: Bitboard.cpp  MagicNumbers.cpp  MoveGeneration.cpp  MovgenTypes.cpp  MurmurHash3.cpp  Zobrist.cpp
src/Tests/: CMakeLists.txt
src/Tests/PerformanceTests/: CmakeLists.txt  SearchNodes.cpp
src/Tests/UnitTests/: CMakeLists.txt
src/Tests/UnitTests/MoveGenerationTests/: perft.cpp
src/UnitTests/: CMakeLists.txt  CmakeLists.txt
src/UnitTests/MoveGeneration/: sliding_pieces.cpp
src/UnitTests/MoveGenerationTest/: perft.cpp  sliding_pieces.cpp
src/Visualization/: CMakeLists.txt  CmakeLists.txt  main.cpp
src/Visualization/headers/: draw_board.hpp  game.h
src/Visualization/src/: draw_board.cpp  event_handler.cpp  game.cpp
